@@ -14,6 +14,17 @@ int B<remctl_open>(struct remctl *I<r>, const char *I<host>,
                    unsigned short I<port>,
                    const char *I<principal>);
 
+int B<remctl_open_addrinfo>(struct remctl *I<r>, const char *I<host>,
+                           const struct addrinfo *I<ai>,
+                           const char *I<principal>);
+
+int B<remctl_open_sockaddr>(struct remctl *I<r>, const char *I<host>,
+                           const struct sockaddr *I<addr>, int I<addrlen>,
+                           const char *I<principal>);
+
+int B<remctl_open_fd>(struct remctl *I<r>, const char *I<host>,
+                      int I<fd>, const char *I<principal>);
+
 =head1 DESCRIPTION
 
 remctl_open() opens a TCP connection to the given I<host> on the given
@@ -25,6 +36,20 @@ connect to the registered port of 4373 and then tries the legacy port of
 fallback to 4444.  If I<principal> is NULL, a service principal of
 C<host/I<host>> is used, with the realm determined by domain-realm
 mapping.
+
+remctl_open_addrinfo() operates in the same manner as remctl_open(), but
+connects to the first usable address in I<ai>, which must be a list of
+results as returned by getaddrinfo(3).  The I<host> is used only to form
+the default service principal, and may be NULL if I<principal> is not NULL.
+
+remctl_open_sockaddr() is equivalent to remctl_open_addrinfo() with a
+single addrinfo structure specifying the use of TCP with socket address
+I<addr> and length I<addrlen>.
+
+remctl_open_fd() operates in the same manner as remctl_open_addrinfo(),
+but uses an already-established TCP connection identified by the file
+descriptor I<fd>.  On Windows, I<fd> is of type C<SOCKET> and must be
+a valid socket descriptor.
 
 If no principal is specified and the default is used, the underlying
 GSS-API library may canonicalize I<host> via DNS before determining the
@@ -68,6 +93,15 @@ falling back to 4444 will be removed in a future version of this library
 in favor of using the C<remctl> service in F</etc/services> if set and
 then falling back on only 4373.  4444 was the poorly-chosen original
 remctl port and should be phased out.
+
+Connections established using the alternate-open interfaces remctl_open_fd(),
+remctl_open_addrinfo(), and remctl_open_sockaddr() do not support the
+automatic connection-reopening which is used to give the illusion of a
+single long-lived connection when sending multiple commands to a server
+which supports only version 1 of the remctl protocol.  Therefore, when
+using these interfaces to open a connection to such a server, it will
+only be possible to send a single command, after which the connection must
+be closed and reopened before another command can be sent.
 
 =head1 NOTES
 
